feat(style): Add the nav buttons style

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 
 body {
 	margin: 0%;
@@ -8,7 +8,7 @@ body {
 nav {
 	padding: 1.5em;
 	padding-left: 4em;
-	padding-right: 3.5em;
+	padding-right: 5em;
 	height: 2.5em;
 	display: flex;
 	align-items: center;
@@ -41,9 +41,41 @@ nav {
 	font-size: 1.5em;
 	padding-left: 0.5em;
 	border-left: 2px solid white;
-	font-weight: lighter;
+	font-weight: 300;
 }
 
 .topbar-buttons {
 	margin-left: auto;
+	display: none;
+}
+
+button {
+	padding: 6px 22px;
+}
+.topbar-buttons button {
+	border-radius: 0.5em;
+	font-size: 24px;
+	height: 2.1em;
+	font-weight: 100;
+	margin-left: 0.5em;
+	color: #fff;
+}
+
+.submit {
+	background: #191a1b;
+	color: #fff;
+	border: 1px solid #fff;
+}
+
+.singin {
+	padding-left: 32px;
+	padding-right: 32px;
+	background-color: #4c5fd5;
+	border: none;
+	transition: all 0.3s linear;
+}
+
+.singin:hover {
+	background-color: white;
+	color: black;
 }
