--- a/style.css
+++ b/style.css
@@ -96,3 +96,13 @@ header h1 {
 	font-size: 4.5em;
 	font-weight: 400;
 }
+
+header input {
+	width: 80%;
+	height: 3.3em;
+	padding-left: 1em;
+	border-radius: 0.2em;
+	font-size: larger;
+	font-weight: 100;
+	border: 1px solid #000;
+}
