--- a/style.css
+++ b/style.css
@@ -79,3 +79,30 @@ button {
 	background-color: white;
 	color: black;
 }
+
+header {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: #dadbf1;
+	padding-top: 80px;
+	padding-bottom: 115px;
+}
+
+header h1 {
+	margin: 0;
+	margin-bottom: 0.25em;
+	font-size: 2em;
+	font-weight: 400;
+}
+
+header input {
+	width: 80%;
+	height: 3.3em;
+	padding-left: 1em;
+	border-radius: 0.2em;
+	font-size: larger;
+	font-weight: 100;
+	border: 1px solid #000;
+}
