--- a/style.css
+++ b/style.css
@@ -1,10 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 
-* {
-	scrollbar-color: white;
-	scrollbar-width: thin;
-}
-
 body {
 	margin: 0%;
 	font-family: "Roboto", sans-serif;
@@ -112,10 +107,10 @@ header input {
 	border: 1px solid #000;
 }
 
-main {
+.list-container {
 	display: grid;
-	padding: 2.5em;
-	padding-top: 5em;
+	margin: 1em;
+	margin-top: 3em;
 }
 
 .list-item {
@@ -157,4 +152,15 @@ main a:-webkit-any-link {
 .list-icon-img {
 	width: 4em;
 	height: 4em;
+}
+
+@media screen and (min-width: 768px) {
+	.list-container {
+		margin-top: 5em;
+		grid-template-columns: repeat(2, 45%);
+		grid-auto-flow: row;
+		gap: 2em;
+		align-content: center;
+		justify-content: center;
+	}
 }
