--- a/style.css
+++ b/style.css
@@ -106,3 +106,61 @@ header input {
 	font-weight: 100;
 	border: 1px solid #000;
 }
+
+.list-container {
+	display: grid;
+	margin: 1em;
+	margin-top: 3em;
+}
+
+.list-item {
+	display: flex;
+	height: fit-content;
+	padding: 0.7em;
+	margin-bottom: 2em;
+}
+
+.list-item h3 {
+	font-size: 18px;
+	font-weight: 500;
+	margin-top: 0;
+}
+
+.list-desc {
+	margin-top: 1em;
+	margin-bottom: 2em;
+	font-size: 18px;
+	font-weight: 300;
+}
+
+.list-desc a {
+	text-decoration: none;
+	color: #4c5fd5;
+}
+
+main a:-webkit-any-link {
+	color: #4c5fd5;
+	text-decoration: none;
+}
+
+.list-icon {
+	width: 4em;
+	height: 4em;
+	margin-right: 1.5em;
+}
+
+.list-icon-img {
+	width: 4em;
+	height: 4em;
+}
+
+@media screen and (min-width: 768px) {
+	.list-container {
+		margin-top: 5em;
+		grid-template-columns: repeat(2, 45%);
+		grid-auto-flow: row;
+		gap: 1em;
+		align-content: center;
+		justify-content: center;
+	}
+}
