--- a/style.css
+++ b/style.css
@@ -154,6 +154,64 @@ main a:-webkit-any-link {
 	height: 4em;
 }
 
+footer {
+	height: 100vh;
+	background-color: #000;
+	color: #fff;
+	padding-left: 1em;
+	padding-top: 1em;
+}
+
+.footerInner {
+	display: grid;
+	grid-template-columns: repeat(2, 50%);
+	grid-auto-flow: row;
+	row-gap: 2.5em;
+}
+
+.footerInner h3 {
+	font-size: 26px;
+	margin-bottom: 0;
+}
+
+.footerInner ul {
+	list-style: none;
+	padding: 0;
+}
+
+.footerInner ul li {
+	font-size: 16px;
+	font-weight: 500;
+	margin-bottom: 0.25em;
+}
+.footerCompany ul {
+	margin-bottom: 2em;
+}
+
+.footerCompany p {
+	margin-top: 0.2em;
+	margin-bottom: 0;
+}
+
+.logo-footer {
+	height: 1.8em;
+	margin-bottom: 1.5em;
+}
+
+.logo-footer svg {
+	height: 1.8em;
+}
+
+.footerCopyright {
+	margin-top: 2em;
+	font-size: 20px;
+}
+
+.footerCopyright p {
+	margin-top: 0;
+	margin-bottom: 0.3em;
+}
+
 @media screen and (min-width: 768px) {
 	.list-container {
 		margin-top: 5em;
