--- a/style.css
+++ b/style.css
@@ -223,6 +223,22 @@ footer {
 		justify-content: center;
 	}
 
+	.list-item h3 {
+		font-size: 22px;
+	}
+
+	.list-desc {
+		font-size: 20px;
+	}
+
+	.list-desc a {
+		font-size: 18px;
+	}
+
+	main a:-webkit-any-link {
+		font-size: 18px;
+	}
+
 	footer {
 		min-height: 20em;
 		padding-left: 2.5em;
