--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ nav {
 	display: flex;
 	align-items: center;
 	background-color: black;
+	position: relative;
+	z-index: 15;
 }
 
 .logo {
@@ -96,20 +98,26 @@ button {
 }
 
 .menu-mobile-closed {
-	display: none;
+	display: grid;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	box-sizing: border-box;
+	border-top: 1px solid white;
+	background-color: #000;
+	overflow: hidden;
+	height: 0;
+	position: absolute;
+	z-index: 10;
+	transition: all 0.5s ease-in-out;
 }
 
 .menu-mobile {
-	display: grid;
-	border-top: 1px solid white;
-	background-color: #000;
-	max-width: 100%;
-	padding: 4em;
-	align-items: center;
-	justify-content: center;
+	height: 20em;
+	padding: 5em;
 }
 
-.menu-mobile button {
+.menu-mobile-closed button {
 	padding-top: 1em;
 	width: 15em;
 	background: none;
